--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,29 @@
-<p>
-  header works!
-</p>
+<div class="row top">
+    <div class="col-md-6">
+        <a href="#">
+          <img class="indra-minsalt" src="" alt="indra-minsait">
+        </a>
+    </div>
+    <div class="col-md-6">
+        <p class="pull-right painel-avisos">
+            <span class="branco-26px">Painel de Avisos</span>
+            <br>
+            <span class="amarelo-16px"> Angular</span>
+            <a href="#">
+              <label class="label label-warning">
+                <span class="glyphicon glyphicon-cog"></span>
+              </label>
+            </a>
+            <a href="#">
+              <label class="label label-warning">
+                <span class="glyphicon glyphicon-plus"></span>
+              </label>
+            </a>
+            <a href="#">
+              <label class="label label-warning">
+                <span class="glyphicon glyphicon-trash"></span>
+              </label>
+            </a>
+        </p>
+    </div>
+  </div>
