--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
-<p>
-  footer works!
-</p>
+<div class="footer hidden-xs hidden-sm">
+    <div class="img col-md-2"></div>
+    <div class="azul col-md-6"><p>&nbsp;</p></div>
+    <div class="azul-claro col-md-3"><p>&nbsp;</p></div>
+    <div class="amarelo col-md-1"><p>&nbsp;</p></div>
+</div>
