Commit Andamento das Aulas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-aulas2></app-aulas2>
+<!-- <app-aulas3>
+   <app-aulas2 class="titulo"></app-aulas2>
+   <app-aulas class="conteudo"></app-aulas>
+</app-aulas3> -->
+<app-diretivas-customizadas></app-diretivas-customizadas>
+<!-- <app-aulas2></app-aulas2> -->
+<!-- <app-testeaula></app-testeaula> -->
