commit sweetalert commit sweetalert

--- a/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -2,6 +2,6 @@
   Texto com Fundo amarelo!
 </p>
 
-<button appFundoAmarelo>Botão</button>
+<button appFundoAmarelo (click)="funcaoTeste()">Botão</button>
 
-<p appHighlightMouse>Texto railaiti</p>
+<p [appHighlightMouse]="'red'">appHighlightMouse railaiti</p>
