commit andamento das aulas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
    <app-aulas2 class="titulo"></app-aulas2>
    <app-aulas class="conteudo"></app-aulas>
 </app-aulas3> -->
-<app-diretivas-customizadas></app-diretivas-customizadas>
+<!-- <app-diretivas-customizadas></app-diretivas-customizadas> -->
+<app-pipes></app-pipes>
+<!-- <app-cursos></app-cursos> -->
 <!-- <app-aulas2></app-aulas2> -->
 <!-- <app-testeaula></app-testeaula> -->
