commit andamento das aulas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<!-- <app-aulas3>
-   <app-aulas2 class="titulo"></app-aulas2>
-   <app-aulas class="conteudo"></app-aulas>
-</app-aulas3> -->
-<!-- <app-diretivas-customizadas></app-diretivas-customizadas> -->
-<app-pipes></app-pipes>
-<!-- <app-cursos></app-cursos> -->
-<!-- <app-aulas2></app-aulas2> -->
-<!-- <app-testeaula></app-testeaula> -->
+<app-header></app-header>
+   <div class="container">
+      <router-outlet></router-outlet>
+   </div>
+<!-- <app-footer></app-footer> -->
