--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,20 @@
-<p>
-  header works!
-</p>
+<div class="container-fluid">  
+  <div class="row">
+    <div class="container">
+
+      <div class="navbar-header">
+        <a class="navbar-brand" routerLink="">Angular</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li routerLinkActive="active"><a routerLink="login">Login</a></li>
+          <li routerLinkActive="active"><a routerLink="cursos">Cursos </a></li>
+          <!-- <li routerLinkActive="active"><a [routerLink]="['curso']">Cursos com Id</a></li> -->
+          <li routerLinkActive="active"><a routerLink="/alunos">Alunos</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+</div>
