commit andamento das aulas

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,8 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li routerLinkActive="active"><a routerLink="login">Login</a></li>
-          <li routerLinkActive="active"><a routerLink="cursos">Cursos </a></li>
-          <!-- <li routerLinkActive="active"><a [routerLink]="['curso']">Cursos com Id</a></li> -->
-          <li routerLinkActive="active"><a routerLink="/alunos">Alunos</a></li>
+          <li routerLinkActive="active"><a routerLink="data-form">Data Form</a></li>
+          <li routerLinkActive="active"><a routerLink="template-form">Template Form</a></li>
         </ul>
       </div>
 
